# semver

./: .coveralls  .travis.yml  CMakeLists.txt  LICENSE
include/semver/: operator.hpp  version_compare.hpp
src/: operator.cpp  version_compare.cpp
test/: CMakeLists.txt  version_compare.cpp
